--- a/modules/100-install-tailscale.yml
+++ b/modules/100-install-tailscale.yml
@@ -1,5 +1,5 @@
-modules:
-  - type: shell
-    commands:
+name: Tailscale
+type: shell
+commands:
       - curl -fsSL https://tailscale.com/install.sh | sh
       - systemctl enable tailscaled
