--- a/modules/100-install-tailscale.yml
+++ b/modules/100-install-tailscale.yml
@@ -1,5 +1,7 @@
-name: Tailscale
-type: shell
-commands:
-      - curl -fsSL https://tailscale.com/install.sh | sh
-      - systemctl enable tailscaled
+name: install-tailscale
+    type: shell
+    commands:
+    - mkdir -p --mode=0755 /usr/share/keyrings
+    - curl -fsSL https://pkgs.tailscale.com/stable/debian/sid.noarmor.gpg | tee /usr/share/keyrings/tailscale-archive-keyring.gpg >/dev/null
+    - curl -fsSL https://pkgs.tailscale.com/stable/debian/sid.tailscale-keyring.list | tee /etc/apt/sources.list.d/tailscale.list
+    - apt-get update && apt-get install -y tailscale
