--- a/recipe.yml
+++ b/recipe.yml
@@ -23,24 +23,31 @@ stages:
 
   # Put your custom actions behind this comment
 
-  #- name: example-packages # Sample module using the built-in Apt module to install packages
-  #  type: apt
-  #  source:
-  #    packages:
-  #    - vim
+  - name: example-packages # Sample module using the built-in Apt module to install packages
+    type: apt
+    source:
+      packages:
+      - vim
 
-  #- name: example-commands # Sample module demonstrating the Shell module with custom commands
-  #  type: shell
-  #  commands:
-  #  - echo Example output
+  - name: example-commands # Sample module demonstrating the Shell module with custom commands
+    type: shell
+    commands:
+    - echo Example output
 
   - name: modules # Sample module demonstrating importing local and remote modules
     type: includes
     includes:
       - modules/50-install-debs.yml # Sample local module present in this repository
       #- gh:vanilla-os/dev-image:main:modules/00-basics.yml # Sample GitHub remote module in the format: `gh:your-name/your-repo:branch:modules/file.yml`
-      - modules/100-install-tailscale.yml # Intalls and enabled Tailscale
       #- https://raw.githubusercontent.com/Vanilla-OS/dev-image/main/modules/05-go.yml # Sample full URL remote module
+
+  - name: install-tailscale # Install Tailscale
+    type: shell
+    commands:
+    - mkdir -p --mode=0755 /usr/share/keyrings
+    - curl -fsSL https://pkgs.tailscale.com/stable/debian/sid.noarmor.gpg | tee /usr/share/keyrings/tailscale-archive-keyring.gpg >/dev/null
+    - curl -fsSL https://pkgs.tailscale.com/stable/debian/sid.tailscale-keyring.list | tee /etc/apt/sources.list.d/tailscale.list
+    - apt-get update && apt-get install -y tailscale
 
   # Put your custom actions before this comment
 
